--- a/pm-proj005/estilo.css
+++ b/pm-proj005/estilo.css
@@ -1,6 +1,7 @@
 body {
     background-color: #9b9b9b;
     padding: 98px 106px 97px 94px;
+    -webkit-font-smoothing: antialiased;
 }
 
 table {
@@ -9,7 +10,7 @@ table {
     font-family: Roboto;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
     padding: 21px 0 21px 0;
-    border-radius: 3px;
+    border-radius: 0 0 3px 3px;
     border-spacing: 0;
 }
 
@@ -19,22 +20,28 @@ caption {
     font-size: 20px;
     font-weight: 500;
     padding: 21px 0 21px 23px;
+    border-radius: 3px 3px 0 0;
+    box-shadow: 0 -2px 3px rgba(0, 0, 0, 0.26);
 }
 
 thead tr th {
     font-size: 13px;
     font-weight: 500;
     text-align: left;
-    padding: 0 0 16px 23px;
-    border-bottom: 1px solid #979797;
+    padding: 0 0 16px 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 tbody tr td {
     font-size: 13px;
     font-weight: 400;
     text-align: left;
-    padding: 16px 0 16px 23px;
-    border-bottom: 1px solid #979797;
+    padding: 16px 0 16px 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+tbody td:first-child, thead th:first-child {
+    padding-left: 23px;
 }
 
 tfoot tr td {
@@ -51,6 +58,7 @@ tbody tr:hover {
 
 select {
     margin-right: 38px;
+    border: none;
 }
 
 span {
