--- a/pm-proj007/estilo.css
+++ b/pm-proj007/estilo.css
@@ -58,29 +58,60 @@ header {
     background-position: center;
 }
 
-#container h2 {
+#topo #container h2 {
     color: #ffffff;
     font-size: 50px;
     font-weight: 400;
     margin: 225px 0 0 68px;    
 }
 
-#container h3 {
+#topo #container h3 {
     color: #ffffff;
     font-size: 36px;
     font-weight: 300;
     margin: 7px 0 0 34px;    
 }
 
-#container button {
-    width: 460px;
-    height: 88px;
+button {
     box-shadow: 0 6px 0 rgba(163, 39, 81, 1);
     border-radius: 3px;
     background: #ff3d7f;
-    border: none;
-    font-size: 36px;
-    font-weight: 300;
     color: #ffffff;
+    border: none;
+    font-weight: 300;
+}
+
+#topo #container button {
+    width: 460px;
+    height: 88px;
+    font-size: 36px;
     margin-top: 26px;
+}
+
+#conheca #container {
+    height: 560px;
+    background-image: url('img/garota_ouve_musica.png');
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+#conheca #container h3 {
+    font-size: 36px;
+    font-weight: 500;
+    padding: 130px 0 0 497px;
+    margin: 0;
+}
+
+#conheca #container p {
+    font-size: 24px;
+    font-weight: 300;
+    padding: 21px 0 0 497px;
+    margin: 0;
+}
+
+#conheca #container button {
+    width: 290px;
+    height: 73px;
+    margin: 43px 0 0 497px;
+    font-size: 30px;
 }
