--- a/pm-proj007/estilo.css
+++ b/pm-proj007/estilo.css
@@ -145,3 +145,49 @@ button {
     margin: 0;
 }
 
+#convite {
+    width: 100%;
+    height: 439px;
+    background-image: url('img/fundo-convite.png');
+    background-repeat: no-repeat;
+}
+
+#convite #container {
+    text-align: center;
+    padding-top: 156px;
+}
+
+#convite #container .email {
+    width: 641px;
+    height: 120px;
+    color: #4a4a4a;
+    font-size: 24px;
+    font-weight: 400;
+    border-radius: 3px;
+    border: none;
+    text-align: center;
+    background-image: url('img/botao-convite.png');
+    background-repeat: no-repeat;
+    background-position: right;
+    background-color: #fff;
+    opacity: 0.89;
+}
+
+#convite #container form button {
+    padding: 0;
+}
+
+#rodape #container {
+    width: 100%;
+    height: 91px;
+    text-align: center;
+    padding-top: 44px;
+    background-color: #2a0157;
+}
+
+#rodape #container span {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 300;
+    letter-spacing: 0.5px;
+}
