--- a/pm-proj007/estilo.css
+++ b/pm-proj007/estilo.css
@@ -50,6 +50,15 @@ header {
     font-weight: 400;
 }
 
+#menu ul #convite {
+    border: solid 1px white;
+    background: none;
+    height: 40px;
+    width: 140px;
+    text-align: center;
+    padding-top: 10px;
+}
+
 #topo {
     width: 100%;
     height: 828px;
